[gd_scene load_steps=28 format=3 uid="uid://384b0wlrmagk"]

[ext_resource type="Script" path="res://Game/Game Scene/control.gd" id="1_f2inu"]
[ext_resource type="Texture2D" uid="uid://cd042arow24w5" path="res://Assets/Background/background-image.jpg" id="2_y7lf8"]
[ext_resource type="Texture2D" uid="uid://bl5f8oey0rw5o" path="res://Assets/Icons/cancel.png" id="4_4wx72"]

[sub_resource type="Gradient" id="Gradient_i2fsd"]
offsets = PackedFloat32Array(0, 0.704819, 1)
colors = PackedColorArray(0.501961, 0.635294, 0.737255, 1, 0.811765, 0.870588, 0.917647, 1, 0.811765, 0.870588, 0.917647, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_rskt8"]
gradient = SubResource("Gradient_i2fsd")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dvmqj"]
bg_color = Color(0.811765, 0.870588, 0.917647, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6lkn8"]
bg_color = Color(0.984314, 0.988235, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="SystemFont" id="SystemFont_0tu0y"]
font_names = PackedStringArray("Avenir")
font_weight = 700

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m3kyo"]
bg_color = Color(0.792157, 0.796078, 0.811765, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.94902, 0.952941, 0.956863, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nwapq"]
bg_color = Color(0.94902, 0.952941, 0.956863, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="SystemFont" id="SystemFont_q35vp"]
font_names = PackedStringArray("Avenir")
font_weight = 700

[sub_resource type="SystemFont" id="SystemFont_bf0ky"]
font_names = PackedStringArray("Avenir")
font_weight = 700

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jijgd"]
bg_color = Color(0.94902, 0.952941, 0.956863, 1)

[sub_resource type="SystemFont" id="SystemFont_t54g6"]
font_names = PackedStringArray("Avenir")
font_weight = 700

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ixkv"]
bg_color = Color(0.972549, 0.752941, 0.392157, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_58o0u"]

[sub_resource type="SystemFont" id="SystemFont_73q4r"]
font_names = PackedStringArray("Avenir")
font_weight = 700

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_omwwx"]
bg_color = Color(0.972549, 0.752941, 0.392157, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lh773"]

[sub_resource type="SystemFont" id="SystemFont_4bcc0"]
font_names = PackedStringArray("Avenir")
font_weight = 700

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pw4ms"]
bg_color = Color(0.972549, 0.752941, 0.392157, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qpppn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wehdi"]
bg_color = Color(0.168627, 0.509804, 0.231373, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e5g1d"]
bg_color = Color(0.972549, 0.752941, 0.392157, 1)
border_color = Color(0.972549, 0.752941, 0.392157, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wbcvv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_50n8j"]
bg_color = Color(0.6, 0.6, 0.6, 0)
corner_radius_top_left = 1000
corner_radius_top_right = 1000
corner_radius_bottom_right = 1000
corner_radius_bottom_left = 1000

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uiqk5"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f2inu")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -324.0
offset_top = -162.0
offset_right = 1596.0
offset_bottom = 885.0
texture = SubResource("GradientTexture1D_rskt8")
expand_mode = 2

[node name="Screen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -231.0
offset_top = -321.0
offset_right = 213.0
offset_bottom = 326.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Screen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Panel" type="Panel" parent="Screen"]
clip_children = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dvmqj")

[node name="VBoxContainer3" type="VBoxContainer" parent="Screen/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = 8.0
offset_right = -11.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Screen/Panel/VBoxContainer3"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Screen/Panel/VBoxContainer3/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Panel" type="Panel" parent="Screen/Panel/VBoxContainer3/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6lkn8")

[node name="TimerIcon" type="TextureRect" parent="Screen/Panel/VBoxContainer3/VBoxContainer/HBoxContainer/Panel"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.5
anchor_right = 0.1
anchor_bottom = 0.5
offset_top = -25.0
offset_right = 50.0
offset_bottom = 25.0
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="TimerLabel" type="Label" parent="Screen/Panel/VBoxContainer3/VBoxContainer/HBoxContainer/Panel"]
custom_minimum_size = Vector2(55, 55)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.9
anchor_top = 0.5
anchor_right = 0.9
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -25.0
offset_bottom = 25.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 6
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("SystemFont_0tu0y")
theme_override_styles/normal = SubResource("StyleBoxFlat_m3kyo")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel2" type="Panel" parent="Screen/Panel/VBoxContainer3/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nwapq")

[node name="CorrectLabel" type="Label" parent="Screen/Panel/VBoxContainer3/VBoxContainer/HBoxContainer/Panel2"]
custom_minimum_size = Vector2(55, 55)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.1
anchor_right = 1.1
offset_left = -203.0
offset_top = 25.0
offset_right = -153.0
offset_bottom = 75.0
size_flags_horizontal = 6
theme_override_colors/font_color = Color(0.0235294, 0.462745, 0.231373, 1)
theme_override_fonts/font = SubResource("SystemFont_q35vp")
theme_override_styles/normal = SubResource("StyleBoxFlat_m3kyo")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WrongLabel" type="Label" parent="Screen/Panel/VBoxContainer3/VBoxContainer/HBoxContainer/Panel2"]
custom_minimum_size = Vector2(55, 55)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.4
anchor_right = 1.4
offset_left = -147.0
offset_top = 25.0
offset_right = -97.0
offset_bottom = 75.0
size_flags_horizontal = 6
theme_override_colors/font_color = Color(0.701961, 0.0117647, 0.129412, 1)
theme_override_fonts/font = SubResource("SystemFont_bf0ky")
theme_override_styles/normal = SubResource("StyleBoxFlat_m3kyo")
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="Screen/Panel/VBoxContainer3"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jijgd")

[node name="TextureRect" type="TextureRect" parent="Screen/Panel/VBoxContainer3/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_y7lf8")
expand_mode = 3

[node name="GuessButtonsContainer" type="VBoxContainer" parent="Screen/Panel/VBoxContainer3"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 20
alignment = 1

[node name="Button" type="Button" parent="Screen/Panel/VBoxContainer3/GuessButtonsContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.0941176, 0.0941176, 0.0941176, 1)
theme_override_fonts/font = SubResource("SystemFont_t54g6")
theme_override_styles/normal = SubResource("StyleBoxFlat_7ixkv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_58o0u")
text = "One"

[node name="Button2" type="Button" parent="Screen/Panel/VBoxContainer3/GuessButtonsContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.0941176, 0.0941176, 0.0941176, 1)
theme_override_fonts/font = SubResource("SystemFont_73q4r")
theme_override_styles/normal = SubResource("StyleBoxFlat_omwwx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lh773")
text = "Two
"

[node name="Button3" type="Button" parent="Screen/Panel/VBoxContainer3/GuessButtonsContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.0941176, 0.0941176, 0.0941176, 1)
theme_override_fonts/font = SubResource("SystemFont_4bcc0")
theme_override_styles/normal = SubResource("StyleBoxFlat_pw4ms")
theme_override_styles/focus = SubResource("StyleBoxEmpty_qpppn")
text = "Three
"

[node name="HBoxContainer2" type="HBoxContainer" parent="Screen/Panel/VBoxContainer3"]
layout_mode = 2
alignment = 1

[node name="RestartButton" type="Button" parent="Screen/Panel/VBoxContainer3/HBoxContainer2"]
clip_contents = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.992157, 0.992157, 0.992157, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_wehdi")
theme_override_styles/hover = SubResource("StyleBoxFlat_e5g1d")
theme_override_styles/focus = SubResource("StyleBoxEmpty_wbcvv")
text = "Reset"
icon_alignment = 1

[node name="QuitButton" type="Button" parent="Screen/Panel/VBoxContainer3/HBoxContainer2"]
clip_contents = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_50n8j")
theme_override_styles/focus = SubResource("StyleBoxEmpty_uiqk5")
icon = ExtResource("4_4wx72")
flat = true
icon_alignment = 1

[connection signal="pressed" from="Screen/Panel/VBoxContainer3/GuessButtonsContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Screen/Panel/VBoxContainer3/GuessButtonsContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Screen/Panel/VBoxContainer3/GuessButtonsContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Screen/Panel/VBoxContainer3/HBoxContainer2/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Screen/Panel/VBoxContainer3/HBoxContainer2/QuitButton" to="." method="_on_quit_button_pressed"]
